= HEAD

* Support :add_script_name, :name, :url, and :url_only options when creating named paths in the path plugin (jeremyevans)

* Add match_affix plugin, for overriding default prefix/suffix used in match patterns (jeremyevans)

* Add empty_root plugin, for making root matcher also match empty string (jeremyevans)

* Add roda_class instance methods to RodaRequest and RodaResponse, to DRY up plugin code (jeremyevans)

* Add sinatra_helpers plugin, porting Sinatra::Helpers methods not covered by other plugins (jeremyevans)

* Don't set the default headers until the response is finished (jeremyevans)

* Add RodaRequest#default_redirect_status, so plugins can override the default status used for redirects (jeremyevans)

* Add drop_body plugin, for automatically dropping body and Content-{Length,Type} headers based on response status (jeremyevans)

* Add clear_middleware! class method, for clearing the current middleware (jeremyevans)

* Add inherit_middleware class accessor, allowing users to turn off middleware inheritance (jeremyevans)

* Add multi_run plugin, for dispatching to multiple rack applications based on the request path prefix (jeremyevans)

* Add environments plugin, for handling development/test/production environments (jeremyevans)

* Do not cache templates by default if RACK_ENV is development (jeremyevans)

* Add delay_build plugin, to delay building the rack app until Roda.app is called (jeremyevans)

* Add :user_agent hash matcher to the header_matchers plugin (jeremyevans)

* Fix caching of templates in the render plugin when :opts or :template_class is used (jeremyevans)

* Require loading the render plugin again if you want to change the default layout (jeremyevans)

* Pass :css_opts and :js_opts as template options (via :opts) instead of render options when rendering (jeremyevans)

* Only pass :opts hash to template class during rendering, instead of all render/view options (jeremyevans)
