@@ -398,17 +398,6 @@ class Roda
           pattern
         end
 
-        # Define a verb method in the given that will yield to the match block
-        # if the request method matches and there are either no arguments or
-        # there is a successful terminal match on the arguments.
-        def def_verb_method(mod, verb)
-          mod.class_eval(<<-END, __FILE__, __LINE__+1)
-            def #{verb}(*args, &block)
-              _verb(args, &block) if #{verb == :get ? :is_get : verb}?
-            end
-          END
-        end
-
         # Since RodaRequest is anonymously subclassed when Roda is subclassed,
         # and then assigned to a constant of the Roda subclass, make inspect
         # reflect the likely name for the class.
@@ -471,6 +460,13 @@ class Roda
           "#{e[SCRIPT_NAME]}#{e[PATH_INFO]}"
         end
         alias full_path_info path
+
+        # Match GET requests.  If no arguments are provided, matches all GET
+        # requests, otherwise, matches only GET requests where the arguments
+        # given fully consume the path.
+        def get(*args, &block)
+          _verb(args, &block) if is_get?
+        end
 
         # Immediately stop execution of the route block and return the given
         # rack response array of status, headers, and body.  If no argument
@@ -598,6 +594,13 @@ class Roda
           else
             if_match(args, &block)
           end
+        end
+
+        # Match POST requests.  If no arguments are provided, matches all POST
+        # requests, otherwise, matches only POST requests where the arguments
+        # given fully consume the path.
+        def post(*args, &block)
+          _verb(args, &block) if post?
         end
 
         # The response related to the current request.  See ResponseMethods for
@@ -1074,6 +1077,4 @@ class Roda
 
   extend RodaPlugins::Base::ClassMethods
   plugin RodaPlugins::Base
-  RodaRequest.def_verb_method(RodaPlugins::Base::RequestMethods, :get)
-  RodaRequest.def_verb_method(RodaPlugins::Base::RequestMethods, :post)
 end
